# os-in-rust

./: Cargo.toml  README.md  x86_64-os_rust.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
